# nanobot

./: .gitignore  Dockerfile  docker-compose.yml
nanobot-channel-webhook/: pyproject.toml
nanobot-channel-webhook/nanobot_channel_webhook/: __init__.py  channel.py
